--- a/package.json
+++ b/package.json
@@ -15,6 +15,6 @@
     },
     "devDependencies" : {
         "mocha"  : ">= 1.13.0",
-        "should" : ">= 1.3.0"
+        "expect.js" : ">= 0.2.0"
     }
 }
