--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "sis-js",
-  "version": "0.0.9",
+  "name": "sis",
+  "version": "0.1.0",
   "description": "SIS Client for Javascript",
-  "main": "lib/sis-js.js",
+  "main": "lib/sis-client.js",
   "scripts": {
     "test": "mocha"
     },
